--- a/src/app/game-modes/endless-trivia/endless-trivia.component.css
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.css
@@ -1,5 +1,3 @@
-
-
 body {
   height: 100vh;
   width: 100vw;
@@ -10,6 +8,10 @@ body {
     rgba(114, 9, 183, 1) 94%
   );
   padding: 0px;
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 img {
@@ -19,14 +21,13 @@ img {
 }
 
 h1 {
-  font-family: "Roboto Slab", serif;
+  font-family: "Bangers", cursive;
   margin: 0px;
 }
 
 .ticker {
-  padding: 5vh 2.5vw 0vw 2.5vw;
-  margin: -5vh 0vw 2vh 0vw;
-  /* margin-bottom: 2vh; */
+  padding: 0vh 3vw 0vw 3vw;
+  margin: 0vh 0vw 2vh 0vw;
   width: auto;
   float: inline-end;
   background-color: #f72585;
@@ -35,6 +36,8 @@ h1 {
   flex-direction: row;
   justify-content: space-evenly;
   border-radius: 0px 0px 10px 10px;
+  position: sticky;
+  top: 0px;
 }
 
 #score {
@@ -43,6 +46,11 @@ h1 {
 
 #quit {
   align-self: flex-end;
+}
+
+#quit:hover {
+  color: #3a0ca3;
+  font-size: 30px;
 }
 
 #q_cont {
@@ -54,7 +62,7 @@ h1 {
 }
 
 #q_title {
-  width: 100%;
+  width: auto;
   padding: 2vw;
   text-align: center;
 }
@@ -92,25 +100,13 @@ input {
 }
 
 input {
-  width: 90vw;
+  width: 75vw;
   padding: 0px;
   margin-bottom: 5px;
-  /* border-radius: 15px; */
   border: none;
 }
 
 button {
-  border: none;
-  border-radius: 15px;
-  color: white;
-  font-family: "Bangers", cursive;
-  font-size: 15px;
-  font-weight: 200;
-  width: 50vw;
-  background-color: #f72585;
-}
-
-.default {
   border: none;
   border-radius: 15px;
   color: white;
@@ -174,7 +170,7 @@ button:hover {
 }
 
 @media screen and (min-width: 768px) {
-  #top_button {
+  /* #top_button {
     display: block;
     width: 10vw;
     height: 3vw;
@@ -183,10 +179,15 @@ button:hover {
     bottom: 20px;
     font-size: 10px;
     margin-left: 45vw;
-  }
+  } */
 
   #h_cont {
     display: none;
+  }
+
+  #random_q {
+    padding: 0px 0px 0px 10px;
+    align-items: center;
   }
 
   #q_cont {
@@ -201,7 +202,7 @@ button:hover {
 
   #q_title {
     width: 25%;
-    padding: 0px;
+    padding: 0px 0px 0px 5px;
     line-height: 80px;
   }
 
@@ -232,46 +233,52 @@ button:hover {
   button {
     width: 325px;
   }
-}
 
-body {
-  height: 100%;
-  width: 100%;
-}
-
-#correct,
-#wrong {
-  width: 25vw;
-  height: 10vh;
-  color: white;
-  position: fixed;
-  left: 37.5vw;
-  bottom: 45vh;
-}
-
-@media screen and (min-width: 992px) {
-  #h_cont {
-    display: none;
+  body {
+    height: 100%;
+    width: 100%;
+    position: static;
   }
 
-  #giph_cont {
-    flex-wrap: wrap;
-  }
-
-  #button_cont {
-    height: 100px;
+  #correct,
+  #wrong {
     width: 25vw;
-    margin-left: 37.5vw;
+    height: 10vh;
+    color: white;
+    position: fixed;
+    left: 37.5vw;
+    bottom: 45vh;
   }
 
-  #q_cont {
-    width: 45vw;
-    margin-left: 27.5vw;
-    box-shadow: none;
-  }
+  @media screen and (min-width: 992px) {
+    #h_cont {
+      display: none;
+    }
 
-  #q_title {
-    width: 25%;
+    #giph_cont {
+      flex-wrap: wrap;
+    }
+
+    #button_cont {
+      height: 100px;
+      width: 25vw;
+      margin-left: 37.5vw;
+    }
+
+    #q_cont {
+      width: 45vw;
+      margin-left: 27.5vw;
+      box-shadow: none;
+    }
+
+    #q_title {
+      width: 25%;
+    }
+
+    #button_cont input,
+    button {
+      width: 20vw;
+    }
   }
 }
 
