--- a/src/app/game-modes/game-modes.component.css
+++ b/src/app/game-modes/game-modes.component.css
@@ -1,58 +1,66 @@
-img{
-    height: 150px;
+img {
+  height: 150px;
 }
 html {
-    background: rgb(58,12,163);
-    background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
-    height: 100vh;
-  }
+  background: rgb(58, 12, 163);
+  background: linear-gradient(
+    180deg,
+    rgba(58, 12, 163, 1) 0%,
+    rgba(114, 9, 183, 1) 94%
+  );
+  height: 100vh;
+}
 /* .GraphicsArea{ */
-body{
-    display:flex;
-    flex-direction: column;
-    background: rgb(58,12,163);
-    background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
-    height: 100vh;
+body {
+  display: flex;
+  flex-direction: column;
+  background: rgb(58, 12, 163);
+  background: linear-gradient(
+    180deg,
+    rgba(58, 12, 163, 1) 0%,
+    rgba(114, 9, 183, 1) 94%
+  );
+  height: 100vh;
 }
 
-.graphicsArea{
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    height: 300px;
-    background-color:white;
+.graphicsArea {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  background-color: white;
 }
 
-.endless, .timed{
-    top: 30%;
-    width: 200px;
-    height: 80px;
-    margin: 100px auto 0;
-    background-color: #39065a;
-    border: none;
-    border-radius: 20px;
-    color: #e4fbff;
-    font-size: 25px;
-    box-shadow: 2px 2px 7px #ea0599;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    flex-direction: row;
-  }
+.endless,
+.timed {
+  top: 30%;
+  width: 200px;
+  height: 80px;
+  margin: 100px auto 0;
+  background-color: #39065a;
+  border: none;
+  border-radius: 20px;
+  color: #e4fbff;
+  font-size: 25px;
+  box-shadow: 2px 2px 7px #ea0599;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  flex-direction: row;
+}
 
-button{
-height:30px;
-display:flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
-margin: 0 auto;
-align-content: space-between;
-
-};
+button {
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  align-content: space-between;
+}
 
 .btn-wrapper {
   display: flex;
@@ -67,7 +75,7 @@ h3 {
 
 mat-card {
   border-radius: 15px;
-  border-top: 10px solid  #4CC9F0;
+  border-top: 10px solid #4cc9f0;
   width: 66%;
   margin: 5px auto 50px;
   height: 35%;
@@ -89,7 +97,6 @@ hr {
 }
 
 @media only screen and (min-width: 600px) {
-
   .cards-wrapper {
     display: flex;
     height: 700px;
@@ -97,16 +104,15 @@ hr {
     line-height: 2em;
   }
 
+  @media only screen and (min-width: 768px) {
+    mat-card {
+      border-radius: 15px;
+      border-top: 10px solid #4cc9f0;
+      width: 40%;
+      margin: 5px auto 50px;
+      height: 35%;
+    }
+  }
 }
 
 /* computer screen */
-@media only screen and (min-width: 768px){
-
-  mat-card {
-    border-radius: 15px;
-    border-top: 10px solid  #4CC9F0;
-    width: 40%;
-    margin: 5px auto 50px;
-    height: 35%;
-  }
-}
