--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,19 @@
 /* mobile screen */
 html {
-  background: rgb(58,12,163);
-  background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
-  height: 100vh;
+  background: rgb(58, 12, 163);
+  background: linear-gradient(
+    180deg,
+    rgba(58, 12, 163, 1) 0%,
+    rgba(114, 9, 183, 1) 94%
+  );
+height: 100vh;
+}
+
+body {
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #ticker {
@@ -13,193 +24,103 @@ html {
   padding-top: 1vh;
   margin: 0vh 0vh 10vh 0vh;
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.background-circles{
-    background-color: white;
-    border-radius: 50%;
-    opacity:10%;
-    width:90%;
-    height:90%;
+.background-circles {
+  background-color: white;
+  border-radius: 50%;
+  opacity: 10%;
+  width: 90%;
+  height: 90%;
 }
 
-.graphicsArea{
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    height: 300px;
-    background-color:white;
-  
+.graphicsArea {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  background-color: white;
 }
 
-button{
-    width: 200px;
-    height: 80px;
-    margin:11px 20px;
-    background-color: #39065a;
-    border: none;
-    border-radius: 20px;
-    color: #e4fbff;
-    font-size: 25px;
-    /* box-shadow: 2px 2px 7px #ea0599; */
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    flex-direction: row;
-}
-
-body {
-height: auto;
+button {
+  width: 200px;
+  height: 80px;
+  margin: 11px 20px;
+  background-color: #39065a;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 25px;
+  cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: center;    
-  flex-direction: column;
+  justify-content: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  flex-direction: row;
 }
 
-button:hover{
+button:hover {
   background-color: #38065a98;
   box-shadow: 3px 3px 8px rgba(234, 5, 154);
   font-size: 26px;
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 img {
-  max-width: 80vw;
-  padding: 0px 0px 10px 10vw;
-  display:flex;
+  width: 80vw;
+  padding: 0px;
+  padding-left: 10vw;
+  display: flex;
   align-items: center;
   justify-content: center;
-  
+}
+
+@media only screen and (min-width: 376px) {
+
+  img {
+    width: 70vw;
+    padding: 0px;
+    padding-left: 15vw;
+    transition: 0.5s ease-in;
   }
 
-/* .large-dot{
-    height:220px;
-    width:220px;
-    border-radius:50%;
-    background-color:rgba(247, 136, 167, 0.6);
-    position:fixed;
-    top:240px;
-    right:74px;
+  button {
+    width: 175px;
+    height: 75px;
   }
 
-  .medium-dot{
-    height:170px;
-    width:170px;
-    border-radius:50%;
-    background-color:rgba(247, 193, 162, 0.7);
-    justify-content:flex-end;
-    display:flex;
-    flex-direction:column;
-    margin:150px 0px 0px -80px;
-    position:fixed;
-    top:212px;
-    right:17px;
+  .button-container {
+    display: flex;
+    padding-top: 5%;
   }
 
-  .small-dot{
-    height:91px;
-    width:91px;
-    border-radius:50%;
-    background-color:rgba(207, 130, 213, 0.6);
-    justify-content:flex-end;
-    display:flex;
-    flex-direction:column;
-    position:fixed;
-    top:299px;
-    right:18px;
-   } */
+  #ticker {
+    font-size: 20px;
+    transition: 0.5s ease-in;
+  }
 
-   /* tablet screen */
-   @media only screen and (min-width: 376px){
-    img {
-      max-width: 100vw;
-      padding: 0px 10px 10px 18vw;
-      display: flex;
-      align-content: stretch;
-      transition: 0.5s ease-in;
-      }
+  @media only screen and (min-width: 769px) {
 
-      button{
-        width: 175px;
-        height: 75px;
-        background-color: #39065a;
-        border: none;
-        border-radius: 20px;
-        color: #e4fbff;
-        font-size: 24px;
-        cursor: pointer;
-        display: flex;
-        align-items: center; 
-        justify-content: center;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
-        flex-direction: row;
-    }
-    .button-container{
-      display: flex;
-      padding-top: 5%;
-    }
-    #ticker {
-      background-color: #f72585;
-      color: white;
-      height: 25px;
-      border-radius: 0px 0px 10px 10px;
-      padding-top: 1vh;
-      margin: 0vh 0vh 10vh 0vh;
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-      font-size: 20px;
-      transition: .5s ease-in;
-    }
-   }
-  /* computer screen */
-   @media only screen and (min-width: 769px){
-    img {
-      max-width: 175vw;
-      padding: 10px 10px 10px 38vw;
-      display: flex;
-      justify-content: center;
-      align-content: stretch;
-      transition: 0.5s ease-in;
-      }
+  img {
+    width: 20vw;
+    padding: 0px;
+    padding-left: 40vw;
+  }
 
-      button{
-        width: 220px;
-        height: 100px;
-        background-color: #39065a;
-        border: none;
-        border-radius: 20px;
-        color: #e4fbff;
-        font-size: 30px;
-        cursor: pointer;
-        display: flex;
-        align-items: center; 
-        justify-content: center;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
-        flex-direction: row;
-    }
-    .button-container{
-      display: flex;
-      padding-top: 5%;
-    }
-    #ticker {
-      background-color: #f72585;
-      color: white;
-      height: 25px;
-      border-radius: 0px 0px 10px 10px;
-      padding-top: 1vh;
-      margin: 0vh 0vh 10vh 0vh;
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-      font-size: 30px;
-      transition: .5s ease-in;
-    }
-   }
+  button {
+    width: 220px;
+    height: 80px;
+    background-color: #39065a;
+    font-size: 28px;
+  }
 
-    
-  
+  #ticker {
+    margin: 0vh 0vw 5vh 0vw;
+    font-size: 25px;
+  }
+}
+}
+
+
