avatar mobile/desktop

--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -13,7 +13,7 @@
     </ng-template>
     
 
-    <p class="yearStarted">Player since: 
+    <p class="yearStarted">Player Since: 
       <span id="date">{{ playerInfo.startDate | date: 'longDate' }}</span></p>
 
   </div>
