--- a/src/app/carousel-img/carousel-img.component.css
+++ b/src/app/carousel-img/carousel-img.component.css
@@ -1,3 +1,5 @@
+/* mobile screen */
+
 :host {
     flex: 1;
   }
@@ -6,13 +8,13 @@
     position: relative;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    /* overflow: auto; */
     border-radius: 0.5em;
   }
   
   .slide {
     position: absolute;
-    top: 70px;
+    top: 9vh;
     left: 0;
     width: 150px;
     height: 150px;
@@ -49,16 +51,16 @@
     }
   
     .control.next {
-      right: -10%;
+      right: -40%;
     }
     .control.prev {
-      left: -10%;
+      left: -40%;
     }
   
   
   .arrow {
     display: flex;
-    align-items: baseline;
+    align-items: baseline; 
     border-left: 0.1em solid #4cc9f0;
     border-bottom: 0.1em solid #4cc9f0;
     width: 0.8em;
@@ -72,3 +74,101 @@
       transform: rotate(225deg);
     }
   
+
+    /* tablet screen */
+    @media only screen and (min-width: 376px){
+    .control {
+      border: none;
+      background-color: transparent;
+      outline: 0; 
+      position: absolute;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0.5em;
+      color: white;
+      font-weight: bold;
+      font-size: 3em;
+      user-select: none;
+      height: 100%;
+      opacity: 80%;
+      transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+    }   
+      .control.next {
+        right: -30%;
+      }
+      .control.prev {
+        left: 0%;
+      }
+    
+    
+    .arrow {
+      display: flex;
+      align-items: baseline; 
+      border-left: 0.15em solid #4cc9f0;
+      border-bottom: 0.15em solid #4cc9f0;
+      width: 0.8em;
+      height: 0.8em;
+    }
+
+    .slide {
+      position: absolute;
+      top: 7vh;
+      left: 9vh;
+      width: 220px;
+      height: 220px;
+      object-fit: cover;
+      transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+      border-radius: 0.5em;
+    }
+  }
+
+      /* ipad pro screen */
+      @media only screen and (min-width: 769px){
+        .control {
+          border: none;
+          background-color: transparent;
+          outline: 0; 
+          position: absolute;
+          cursor: pointer;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding: 0.5em;
+          color: white;
+          font-weight: bold;
+          font-size: 3em;
+          user-select: none;
+          height: 100%;
+          opacity: 80%;
+          transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+        }   
+          .control.next {
+            right: -30%;
+          }
+          .control.prev {
+            left: 0%;
+          }
+        
+        
+        .arrow {
+          display: flex;
+          align-items: baseline; 
+          border-left: 0.2em solid #4cc9f0;
+          border-bottom: 0.2em solid #4cc9f0;
+          width: 0.9em;
+          height: 0.9em;
+        }
+    
+        .slide {
+          position: absolute;
+          top: 8vh;
+          left: 9.5vh;
+          width: 275px;
+          height: 275px;
+          object-fit: cover;
+          transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+          border-radius: 0.5em;
+        }
+      }
