--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -156,7 +156,7 @@ img {
       transition: .5s ease-in;
     }
    }
-  /* computer screen */
+  /* ipad pro screen */
    @media only screen and (min-width: 769px){
     img {
       max-width: 175vw;
