--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -112,10 +112,10 @@ img {
     position:fixed;
     top:299px;
     right:18px;
-   } */
-
-   /* tablet screen */
+   }
+  
    @media only screen and (min-width: 376px){
+
     img {
       max-width: 100vw;
       padding: 0px 10px 10px 18vw;
@@ -201,6 +201,7 @@ img {
       transition: .5s ease-in;
     }
    }
+  }
 
     
   
