--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,6 +7,7 @@ html {
     rgba(114, 9, 183, 1) 94%
   );
 height: 100vh;
+width: 100vw;
 }
 
 body {
@@ -101,107 +102,19 @@ img {
     transition: 0.5s ease-in;
   }
 
-  .small-dot{
-    height:91px;
-    width:91px;
-    border-radius:50%;
-    background-color:rgba(207, 130, 213, 0.6);
-    justify-content:flex-end;
-    display:flex;
-    flex-direction:column;
-    position:fixed;
-    top:299px;
-    right:18px;
-   }
-  
-   @media only screen and (min-width: 376px){
-
-    img {
-      max-width: 100vw;
-      padding: 0px 10px 10px 18vw;
-      display: flex;
-      align-content: stretch;
-      transition: 0.5s ease-in;
-      }
-
-      button{
-        width: 175px;
-        height: 75px;
-        background-color: #39065a;
-        border: none;
-        border-radius: 20px;
-        color: #e4fbff;
-        font-size: 24px;
-        cursor: pointer;
-        display: flex;
-        align-items: center; 
-        justify-content: center;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
-        flex-direction: row;
-    }
-    .button-container{
-      display: flex;
-      padding-top: 5%;
-    }
-    #ticker {
-      background-color: #f72585;
-      color: white;
-      height: 25px;
-      border-radius: 0px 0px 10px 10px;
-      padding-top: 1vh;
-      margin: 0vh 0vh 10vh 0vh;
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-      font-size: 20px;
-      transition: .5s ease-in;
-    }
-   }
-  /* ipad pro screen */
-   @media only screen and (min-width: 769px){
-    img {
-      max-width: 175vw;
-      padding: 10px 10px 10px 38vw;
-      display: flex;
-      justify-content: center;
-      align-content: stretch;
-      transition: 0.5s ease-in;
-      }
-
-      button{
-        width: 220px;
-        height: 100px;
-        background-color: #39065a;
-        border: none;
-        border-radius: 20px;
-        color: #e4fbff;
-        font-size: 30px;
-        cursor: pointer;
-        display: flex;
-        align-items: center; 
-        justify-content: center;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
-        flex-direction: row;
-    }
-    .button-container{
-      display: flex;
-      padding-top: 5%;
-    }
-    #ticker {
-      background-color: #f72585;
-      color: white;
-      height: 25px;
-      border-radius: 0px 0px 10px 10px;
-      padding-top: 1vh;
-      margin: 0vh 0vh 10vh 0vh;
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-      font-size: 30px;
-      transition: .5s ease-in;
-    }
-   }
   }
 
+   @media only screen and (min-width: 769px){
+    img {
+      width: 25vw;
+      padding-left: 37.5vw;
+      transition: 0.5s ease-in;
+      }
+
+    .button-container{
+      display: flex;
+      padding-top: 5%;
+    }
+   }
     
   
