--- a/src/app/carousel-img/carousel-img.component.html
+++ b/src/app/carousel-img/carousel-img.component.html
@@ -5,7 +5,8 @@
        [src]="slide.src"
        class="slide"
        @carouselAnimation
-       (click)="onPickAvatar(slide)"
+       #avatarImg
+       (click)="onPickAvatar(avatarImg.src)"
      />
 
    </ng-container>
