implemented choose avatar

--- a/src/app/carousel-img/carousel-img.component.html
+++ b/src/app/carousel-img/carousel-img.component.html
@@ -6,7 +6,7 @@
        class="slide"
        @carouselAnimation
        #avatarImg
-       (click)="onPickAvatar(avatarImg.src)"
+       [routerLink]="['/player-profile', avatarImg.src]"
      />
 
    </ng-container>
