--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -12,7 +12,7 @@
       <h1>Player</h1>
     </ng-template>
 
-    <p class="yearStarted">Player Since:
+    <p class="yearStarted">Player Since: <br>
       <span id="date">{{ playerInfo.startDate | date: 'longDate' }}</span></p>
 
   </div>
@@ -24,7 +24,7 @@
 
   <div class="playerStatsSection informationContainer">
       <p class="played">Games Played:</p>
-      <h2>{{playerInfo.gamesPlayed}}</h2>
+      <h2>{{playerInfo.gamesPlayed}}  </h2>
 
       <div class="verticalPipe"></div>
 
