--- a/src/app/choose-avatar/choose-avatar.component.css
+++ b/src/app/choose-avatar/choose-avatar.component.css
@@ -13,4 +13,14 @@ html {
   height: 100vh;
 }
 
+/*tablet view*/
+@media only screen and (min-width: 768px) {
+}
+
+
+/*desktop view*/
+@media only screen and (min-width: 1030px){
+
+}
+
 
