--- a/src/app/game-modes/endless-trivia/endless-trivia.component.css
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.css
@@ -169,17 +169,54 @@ button:hover {
   display: none;
 }
 
+#gameOver {
+  font-family: "Bangers", cursive;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+  width: 101%;
+  height: 101%;
+  background-color: #39065a;
+}
+
+#endingParagraph {
+  display: flex;
+  color: white;
+  justify-content: center;
+  /* align-items: center; */
+  font-size: 30px;
+  font-weight: 200;
+  color: #ea0599;
+  padding: 12vh 5vw 10vh 5vw;
+  height: 100px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  line-height: 50px;
+}
+
+#end_button_cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+}
+
+.endingHeader {
+  padding: 0vh 0vw 5vh 0vw;
+  font-size: 50px;
+  font-family: "Bangers", cursive;
+  color: white;
+  text-align: center;
+}
+
+/*tablet display*/
 @media screen and (min-width: 768px) {
-  /* #top_button {
-    display: block;
-    width: 10vw;
-    height: 3vw;
-    background-color: rgb(58, 12, 163, 0.5);
-    position: fixed;
-    bottom: 20px;
-    font-size: 10px;
-    margin-left: 45vw;
-  } */
 
   #h_cont {
     display: none;
@@ -196,8 +233,8 @@ button:hover {
     top: 5vh;
     width: 75vw;
     height: 80px;
-    margin-left: 12.5vw;
     box-shadow: none;
+    margin: 0vw 12.5vw 2vw 12.5vw;
   }
 
   #q_title {
@@ -215,10 +252,15 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    column-count: auto;
+    column-gap: 5px;
+    column-width: 20vw;
+    width: 1;
+    height: 125vh;
   }
 
   #giph_cont img {
-    max-width: 90vw;
+    max-width: 25vw;
   }
 
   #button_cont {
@@ -242,21 +284,22 @@ button:hover {
 
   #correct,
   #wrong {
-    width: 25vw;
+    width: 15vw;
     height: 10vh;
     color: white;
     position: fixed;
-    left: 37.5vw;
+    left: 42.5vw;
     bottom: 45vh;
   }
-
-  @media screen and (min-width: 992px) {
+/*desktop*/
+  @media screen and (min-width: 1030px) {
     #h_cont {
       display: none;
     }
 
     #giph_cont {
       flex-wrap: wrap;
+      height: 250vh;
     }
 
     #button_cont {
