--- a/src/app/game-modes/game-modes.component.css
+++ b/src/app/game-modes/game-modes.component.css
@@ -95,16 +95,24 @@ mat-card-content {
 hr {
   margin: 20px 20px;
 }
-
-@media only screen and (min-width: 600px) {
+/*tablet view*/
+@media only screen and (min-width:768px) {
   .cards-wrapper {
     display: flex;
     height: 700px;
     font-size: large;
     line-height: 2em;
   }
-
-  @media only screen and (min-width: 768px) {
+  mat-card {
+    border-radius: 15px;
+    border-top: 10px solid #4cc9f0;
+    width: 40%;
+    margin: 5px auto 50px;
+    height: 35%;
+  }
+}
+/*desktop view*/
+  @media only screen and (min-width: 1030px) {
     mat-card {
       border-radius: 15px;
       border-top: 10px solid #4cc9f0;
@@ -113,6 +121,6 @@ hr {
       height: 35%;
     }
   }
-}
+
 
 
