--- a/src/app/game-modes/time-challenge/time-challenge.component.css
+++ b/src/app/game-modes/time-challenge/time-challenge.component.css
@@ -20,8 +20,6 @@ body {
   background-color: #f72585;
 }
 
-
-
 #startbutton {
   width: 110px;
   height: 40px;
@@ -292,18 +290,8 @@ button:hover {
 #top_button {
   display: none;
 }
-
+/*tablet view*/
 @media screen and (min-width: 768px) {
-  #top_button {
-    display: block;
-    width: 10vw;
-    height: 3vw;
-    background-color: rgb(58, 12, 163, 0.5);
-    position: fixed;
-    bottom: 20px;
-    font-size: 10px;
-    margin-left: 45vw;
-  }
 
   #h_cont {
     display: none;
@@ -322,6 +310,7 @@ button:hover {
     height: 80px;
     margin-left: 12.5vw;
     box-shadow: none;
+    margin: 0vw 2.5vw 2vw 2.5vw;
   }
 
   #q_title {
@@ -339,10 +328,15 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    column-count: auto;
+    column-gap: 5px;
+    column-width: 20vw;
+    max-width: 1;
+    height: 250vh;
   }
 
   #giph_cont img {
-    max-width: 90vw;
+    max-width: 25vw;
   }
 
   #button_cont {
@@ -370,8 +364,8 @@ button:hover {
     position: fixed;
     left: 37.5vw;
   }
-
-  @media screen and (min-width: 992px) {
+/*desktop view*/
+  @media screen and (min-width: 1030px) {
     #h_cont {
       display: none;
     }
