--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,7 @@
 <mat-menu #menu="matMenu">
   <button mat-menu-item (click)="routeHome()" class="hamburgerDropDown">Home</button>
   <button mat-menu-item (click)="routeLeaderBoard()" class="hamburgerDropDown">Leaderboard</button>
-  <button mat-menu-item (click)="routePlayerProfile()" class="hamburgerDropDown">Profile</button>
+  <button mat-menu-item (click)="routePlayerProfile()" class="hamburgerDropDown" *ngIf="isAuthenticated">Profile</button>
   <button mat-menu-item (click)="routeGameModes()" class="hamburgerDropDown">Game Modes</button>
   <button mat-menu-item (click)="onLogin()" class="hamburgerDropDown"  *ngIf="!isAuthenticated">Login</button>
   <!-- class="login-btn" -->
