--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -89,12 +89,12 @@ button{
     justify-content: center;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .buttonGroup{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items:center;
     /* background-color: transparent; */
@@ -141,7 +141,7 @@ p.ranking{
 
 
   /* tablet screen */
-  @media only screen and (min-width: 376px){
+  @media only screen and (min-width: 768px){
     body {
         height: 100vh;
         width: 100vw;
@@ -158,7 +158,7 @@ p.ranking{
       }
 
   /* computer screen */
-   @media only screen and (min-width: 768px){
+   @media only screen and (min-width: 1030px){
     body {
         height: 100vh;
         width: 100vw;
